examples/test/testpolicy4736.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4736
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key15: value32
      key27: value29
      key40: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value32
          key32: value6
      podSelector:
        matchLabels:
          key7: value27
